test/lit/pto/async_put_invalid_non_1d.pto
// RUN: not ptoas %s 2>&1 | FileCheck %s

module {
  func.func @bad_async_put(%dst: !pto.ptr<f32>,
                           %src: !pto.ptr<f32>,
                           %workspace: !pto.ptr<i8>) {
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c4 = arith.constant 4 : index
    %c32 = arith.constant 32 : index
    %dst_tv = pto.make_tensor_view %dst, shape = [%c4, %c32], strides = [%c32, %c1] : !pto.tensor_view<4x32xf32>
    %src_tv = pto.make_tensor_view %src, shape = [%c4, %c32], strides = [%c32, %c1] : !pto.tensor_view<4x32xf32>
    %dst_pt = pto.partition_view %dst_tv, offsets = [%c0, %c0], sizes = [%c4, %c32] : !pto.tensor_view<4x32xf32> -> !pto.partition_tensor_view<4x32xf32>
    %src_pt = pto.partition_view %src_tv, offsets = [%c0, %c0], sizes = [%c4, %c32] : !pto.tensor_view<4x32xf32> -> !pto.partition_tensor_view<4x32xf32>
    %scratch = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=i8, rows=1, cols=256, v_row=1, v_col=256, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %session = pto.comm.build_async_session(%scratch, %workspace : !pto.tile_buf<loc=vec, dtype=i8, rows=1, cols=256, v_row=1, v_col=256, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.ptr<i8>) -> !pto.async_session
    %event = pto.comm.tput_async(%dst_pt, %src_pt, %session : !pto.partition_tensor_view<4x32xf32>, !pto.partition_tensor_view<4x32xf32>, !pto.async_session) -> !pto.async_event
    return
  }
}

// CHECK: error: 'pto.comm.tput_async' op expects dst to be a static flat contiguous logical 1D GM view
